--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,4 +3,6 @@ spring.h2.console.enabled=true
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=root
 spring.datasource.password=
+logging.level.root=debug
+token=Bearer 123456
 spring.liquibase.change-log=classpath:/db/changelog/changelog-master.xml
