--- a/frontend/app-react/package.json
+++ b/frontend/app-react/package.json
@@ -15,6 +15,7 @@
     "react-redirect": "^1.0.0",
     "react-redux": "^4.4.5",
     "react-router": "^3.0.0",
+    "react-router-dom": "^5.2.0",
     "recharts": "^0.18.0",
     "redux": "^3.5.2",
     "redux-logger": "^2.6.1",
