--- a/build.gradle
+++ b/build.gradle
@@ -29,7 +29,11 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springframework.kafka:spring-kafka:2.6.4'
+	implementation 'io.projectreactor.kafka:reactor-kafka:1.3.1'
+	implementation 'io.projectreactor:reactor-core:3.4.1'
 	implementation 'org.springframework.boot:spring-boot-starter-webflux'
+	implementation 'com.github.javafaker:javafaker:0.15'
 	implementation 'org.springframework.boot:spring-boot-starter-websocket'
 	implementation 'io.jsonwebtoken:jjwt:0.9.1'
 	implementation "jakarta.xml.bind:jakarta.xml.bind-api:2.3.2"
@@ -38,10 +42,9 @@ dependencies {
 	implementation 'commons-codec:commons-codec:1.15'
 	implementation 'org.liquibase:liquibase-core'
 	implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
-	implementation 'org.springframework.kafka:spring-kafka'
+
 	compileOnly 'org.projectlombok:lombok'
 	implementation 'com.h2database:h2:1.4.200'
-	implementation 'com.fasterxml.jackson.core:jackson-databind:2.12.1'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	runtimeOnly 'io.micrometer:micrometer-registry-prometheus'
 	runtimeOnly 'mysql:mysql-connector-java'
