--- a/scripts/kafka/docker-compose.yml
+++ b/scripts/kafka/docker-compose.yml
@@ -6,10 +6,8 @@ services:
     domainname: kafka
     container_name: kafka
     image: wurstmeister/kafka
-    networks:
-      - springboot-proxysql-mysql
     environment:
-      KAFKA_ADVERTISED_HOST_NAME: kafka
+      KAFKA_ADVERTISED_HOST_NAME: localhost
       KAFKA_ADVERTISED_PORT: 9092
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
       KAFKA_BROKER_ID: 1
@@ -20,8 +18,6 @@ services:
     container_name: zookeeper
     image: wurstmeister/zookeeper
     restart: always
-    networks:
-      - springboot-proxysql-mysql
     ports:
       - 2181:2181
       - 2888:2888
