--- a/src/main/resources/application-h2.properties
+++ b/src/main/resources/application-h2.properties
@@ -5,5 +5,6 @@ spring.datasource.username=root
 spring.datasource.password=
 logging.level.root=info
 token=Bearer 123456
+kafkaUrl=localhost:9094
 server.port=8082
 spring.liquibase.change-log=classpath:/db/changelog/changelog-master.xml
